--- a/www/index.html
+++ b/www/index.html
@@ -46,14 +46,21 @@ settings);
 	<div class="menu-row"> <a href="#hearts">Team</a> </div>
 	<div class="menu-row"> <a href="#forma"> Contact </a> </div>          </div>
 
+
+
+ 
 	</div>
 
-		<div class="cont">  <div id="meet"> Meet</div>  <div class="team1"> Team! </div ><br> <div class="creativ"> <font style="color:green;">/creative</font> one page template. </div> </font> <br> <div class="professionals">We are a team of professionals</div>   </div>
+
+
+		<div class="cont">  <div id="meet"> Meet</div>  <div class="team1"> Team! </div ><br>
+		 <div class="creativ"> <font style="color:green;">/creative</font> one page template. </div>
+		  </font> <br> <div class="professionals">We are a team of professionals</div>   </div>
 		
 		
 <div class="icone">  <img src="image/twitter.png" alt="" width="20" height="16"> <img src="image/facebook.png" alt="" width="10" height="18">  <img src="image/discuss-google.png" alt="" width="20" height="20">  <img src="image/dribble.png" alt="" width="20" height="20"> </div>
 
-
+<div class="feedback"    </div> 
 </header>
 	</div>
 
@@ -63,13 +70,17 @@ settings);
 
 		<div class="feat-colum">
 
-		<div class="colum"><div class="image-col"><img src="image/feather.png" alt="" width="50" height="50"></div> Branding  <br><br>
-		<div class="text"> Sed ut perspiciatis unde omnis iste natus error <br> sit voluptatem accusantium doloremque <br> laudantium, totam rem aperiam, eaque ipsa <br> 
-			quae ab illo inventore </div> </div> 
+		<div class="colum">
+			<div class="image-col">
+			<img src="image/feather.png" alt="" width="50" height="50"></div><div> Branding  <br><br>
+		 Sed ut perspiciatis unde omnis iste natus error  sit voluptatem <br> accusantium doloremque
+		  <br> laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore </div> </div> 
 		<div class="colum"><div class="image-col"><img src="image/pencil.png" alt="" width="50" height="50"></div> Development<br><br>
-		<div class="text">Sed ut perspiciatis unde omnis iste natus error <br> sit voluptatem accusantium doloremque <br> laudantium, totam rem aperiam, eaque ipsa <br> 
-			quae ab illo inventore </div>  </div>
-		<div class="colum"> <div class="image-col">  <img src="image/speaker.png" alt="" width="50" height="50"></div>  Consulting  <br><br><div class="text">Sed ut perspiciatis unde omnis iste natus error <br> sit voluptatem accusantium doloremque <br> laudantium, totam rem aperiam, eaque ipsa <br> quae ab illo inventore </div>  
+		Sed ut perspiciatis unde omnis iste natus error  sit voluptatem <br> accusantium doloremque <br> 
+		laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore  </div>
+		<div class="colum"> <div class="image-col">  <img src="image/speaker.png" alt="" width="50" height="50"></div>  Consulting  <br><br>
+		Sed ut perspiciatis unde omnis iste natus error  sit voluptatem <br> accusantium doloremque <br> 
+		laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore 
 	</div>
  
 
@@ -81,11 +92,14 @@ settings);
 		<div class="circle1"></div>
 		<div class="circle2"></div>  
 	</div>
+	 
 </div>
 
-<div id="conteiner1">
+	
+<div id="conteiner2">
 
-	<h1>WORKS</h1> <br>
+	<h1>WORKS</h1> 
+	<br>
 
 	<div class="heart">   <hr>   <img src="image/footer-heart.png" alt="heart" width="20" height="16">   <hr></div> 
 
@@ -163,14 +177,17 @@ settings);
 
 
 	<div class="sings">   
-		 <div class="any-sings">  <img src="image/clock.png" alt="" width="130" height="130"><br><br><font style="font-size:75px;">
-			3200 </font><br><br>HOURS OF WORK</div>
-		 <div class="any-sings">  <img src="image/faces.png" alt="" width="130" height="130"><br><br><font style="font-size:75px;">
-			120 </font><br><br>SATISFIED CLIENTS</div>
-		 <div class="any-sings">  <img src="image/rocket.png" alt="" width="130" height="130"><br><br><font style="font-size:75px;">
-			360 </font><br><br>PROJECTS DELIVERED</div>
-		 <div class="any-sings">  <img src="image/cup.png" alt="" width="130" height="130"><br><br><font style="font-size:75px;">
-			6454 </font><br><br>AWARDS WON</div> 
+		 <div class="any-sings">  <img src="image/clock.png" alt="" ><br><br> 
+		 	<div class="size-number">3200 </div><br><br>HOURS OF WORK</div>
+		 <div class="any-sings">  <img src="image/faces.png" alt="" ><br><br>
+		 	<div class="size-number">
+			120 </div><br><br>SATISFIED CLIENTS</div>
+		 <div class="any-sings">  <img src="image/rocket.png" alt="" ><br><br>
+		 	<div class="size-number">
+			360 </div><br><br>PROJECTS DELIVERED</div>
+		 <div class="any-sings">  <img src="image/cup.png" alt="" ><br><br>
+		 	<div class="size-number">
+			42 </div><br><br>AWARDS WON</div> 
 			  
 	</div>
 
